--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,8 +13,9 @@
   --ifm-color-primary-light: #33925d;
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
+  --ifm-code-font-size: 80%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-font-size-base: 80%;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
